--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.modal {
+  display: grid;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  place-items: center;
+  background-color: #d3d3d382;
+}
+
+.modal > div {
+  background-color: white;
+  padding: 100px;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);;
+  border-radius: 10px;
+}
